syntax = "proto3";

package user.v1;
option go_package = "github.com/DENFNC/Zappy/user_service/proto/gen/v1;v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

message WishlistItem {
  string item_id    = 1 [(validate.rules).string = {len: 36}];
  string profile_id = 2 [(validate.rules).string = {len: 36}];
  string product_id = 3 [(validate.rules).string = {len: 36}];
  google.protobuf.Timestamp added_at = 4;
  bool   is_active  = 5;
}

message CreateWishlistItemRequest {
  WishlistItem wishlist_item = 1;
}
message GetWishlistItemRequest {
  string item_id = 1 [(validate.rules).string = {len: 36}];
}
message UpdateWishlistItemRequest {
  WishlistItem wishlist_item = 1;
}
message DeleteWishlistItemRequest {
  string item_id = 1 [(validate.rules).string = {len: 36}];
}
message ListWishlistItemsRequest {
  string profile_id = 1 [(validate.rules).string = {len: 36}];
}
message ListWishlistItemsResponse {
  repeated WishlistItem wishlist_items = 1;
}

service WishlistItemService {
  rpc CreateWishlistItem(CreateWishlistItemRequest) returns (WishlistItem);
  rpc GetWishlistItem(GetWishlistItemRequest)       returns (WishlistItem);
  rpc UpdateWishlistItem(UpdateWishlistItemRequest) returns (WishlistItem);
  rpc DeleteWishlistItem(DeleteWishlistItemRequest) returns (google.protobuf.Empty);
  rpc ListWishlistItems(ListWishlistItemsRequest)   returns (ListWishlistItemsResponse);
}
